--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "jsdom": "^22.1.0",
     "postcss": "^8.4.21",
     "prettier": "3.3.3",
+    "sharp": "^0.33.5",
+    "svgo": "^3.3.2",
     "tailwindcss": "^3.3.1",
     "typescript": "~5.4.2",
     "vite": "^5.0.0",
+    "vite-plugin-image-optimizer": "^1.1.8",
     "vitest": "^1.3.1"
   }
 }
