--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "test": "ng test"
   },
   "dependencies": {
-    "@analogjs/content": "^1.10.3",
-    "@analogjs/router": "^1.10.3",
+    "@analogjs/content": "^1.16.0",
+    "@analogjs/router": "^1.16.0",
     "@angular/animations": "^19.0.4",
     "@angular/build": "^19.0.5",
     "@angular/common": "^19.0.4",
@@ -57,5 +57,6 @@
     "vite": "^5.0.0",
     "vite-plugin-image-optimizer": "^1.1.8",
     "vitest": "^1.3.1"
-  }
+  },
+  "packageManager": "pnpm@10.8.1+sha512.c50088ba998c67b8ca8c99df8a5e02fd2ae2e2b29aaf238feaa9e124248d3f48f9fb6db2424949ff901cffbb5e0f0cc1ad6aedb602cd29450751d11c35023677"
 }
